--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "license": "ISC",
   "jest": {
     "testEnvironment": "node"
+  },
+  "devDependencies": {
+    "nock": "^11.3.3",
+    "sinon": "^7.4.2"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "express": "^4.17.1"
   }
 }
